<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Berea College Map</string>
    <string name="buildings">Buildings</string>
    <string name="headercontentdescription">Header Image</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="aboutMap">About Maps</string>
    <string name="about_title">About</string>
    <string name="mapsabout_info">"This app was created by Jacob Patton and modified by Matthew Ondak. It is an open source app licenced under the Apache License Version 2.0 and always welcome improvements. "</string>
    <string name="maphelp_title">Instructions</string>
    <string name="maphelp_info">        &lt;b>Viewing Map&lt;/b>&lt;br>
        To soom in just pinch two fingers on the screen to zoomk in and out. This will allow you to see the whole campus map. 
</string>

    <string name="mapresources_title">Resources</string>
    <string name="mapresources_info">&lt;b>TouchImageView &lt;/b>&lt;br>
        \u00A9 2013 Michael Ortiz&lt;br>
        Updated By: Patrick Lackemacher and Babay88&lt;br>
        TouchImageView is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2013 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>
		&lt;br>Unless required by applicable law or agreed to in writing,software distributed under the License is distributed on an \'AS IS\'BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,either express or implied. See the License for the specific language governing permissions and limitations under the License.
		</string>

    
</resources>