<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="fill_parent"
	android:background="@drawable/background"
	android:layout_height="wrap_content">
		
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
     >
     
      <TextView
        android:id="@+id/AboutTitle"
		android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title" 
        android:textSize="20sp"/>   
      
      <TextView
        android:id="@+id/AboutInfo"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapsabout_info"
        android:paddingBottom="10dp" 
      />   
        
      
      <TextView
        android:id="@+id/AboutHelpTitle"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maphelp_title" 
        android:textSize="20sp"/>   
      
     
      <TextView
        android:id="@+id/AboutHelpInfo"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maphelp_info" 
        android:paddingBottom="10dp"
       />   
        
      
      <TextView
        android:id="@+id/AboutResourcesTitle"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapresources_title" 
        android:textSize="20sp"/>   
          
      
      <TextView
        android:id="@+id/AboutResourcesInfo"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="" 
       />   
        </LinearLayout>
  </ScrollView>
